--- a/app/src/main/res/layout/initial_screen.xml
+++ b/app/src/main/res/layout/initial_screen.xml
@@ -77,7 +77,8 @@
         <!-- LAYOUT APP ENABLED -->
         <LinearLayout
             style="@style/layoutAppEnabled"
-            android:id="@+id/layout_app_enabled">
+            android:id="@+id/layout_app_enabled"
+            android:visibility="gone">
 
             <!-- SWITCH BUTTON -->
             <LinearLayout
