--- a/app/src/main/res/layout/add_contact_screen.xml
+++ b/app/src/main/res/layout/add_contact_screen.xml
@@ -56,45 +56,11 @@
                     style="@style/layoutListContactsPhonebook">
 
                     <ListView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/listView"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="1" />
-
-
-                    <RelativeLayout
-                        style="@style/layoutContact">
-
-                        <TextView
-                            style="@style/contactName"
-                            android:text="Pepe"/>
-
-                        <Button
-                            style="@style/addButton"
-                            android:id="@+id/add_contact_green"
-                            android:clickable="true"/>
-
-                    </RelativeLayout>
-
-                    <RelativeLayout
-                        style="@style/layoutContact">
-
-                        <TextView
-                            style="@style/contactName"
-                            android:text="Pepe"/>
-
-                        <Button
-                            style="@style/addButton"
-                            android:clickable="true"/>
-
-                    </RelativeLayout>
+                        android:id="@+id/list_view_add_contact"
+                        style="@style/listViewContacts"
+                        android:layout_marginTop="-1dp" />
                 </LinearLayout>
 
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"></LinearLayout>
                 <View
                     android:id="@+id/settings_bar"
                     style="@style/headerBarRed" />
